--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "1.1.4"
   },
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "redux": "^4.0.0",
     "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
